syntax = "proto3";

option csharp_namespace = "ManagementService.Proto.Management.V1";

package management.v1;

import "google/protobuf/timestamp.proto"; // For using timestamps

// The Management API provides endpoints for centralized OPC client management.
service ManagementApi {
  // Registers a new OPC client instance with the management system.
  rpc RegisterClient (RegisterClientRequest) returns (RegisterClientResponse);

  // Updates the status of an existing OPC client instance.
  rpc UpdateClientStatus (UpdateClientStatusRequest) returns (UpdateClientStatusResponse);

  // Retrieves the current configuration for a specific client instance.
  // This would typically return the *active* configuration.
  rpc GetClientConfiguration (GetClientConfigurationRequest) returns (GetClientConfigurationResponse);

  // Initiates a bulk configuration deployment to multiple client instances.
  rpc InitiateBulkConfiguration (InitiateBulkConfigurationRequest) returns (InitiateBulkOperationResponse);

  // Initiates a bulk software update for multiple client instances.
  rpc InitiateBulkUpdate (InitiateBulkUpdateRequest) returns (InitiateBulkOperationResponse);

  // Gets the status of a bulk operation job.
  rpc GetBulkOperationStatus (GetBulkOperationStatusRequest) returns (BulkOperationStatusResponse);

  // Initiates a client configuration migration process from a file.
  rpc StartConfigurationMigration (StartConfigurationMigrationRequest) returns (StartConfigurationMigrationResponse);

  // Gets the status of a configuration migration job.
  rpc GetConfigurationMigrationStatus (GetConfigurationMigrationStatusRequest) returns (ConfigurationMigrationStatusResponse);
}

// --- Message Definitions ---

// Messages for RegisterClient RPC
message RegisterClientRequest {
  string client_name = 1;
  string initial_status = 2; // e.g., "Registering", "Connected"
  // Consider adding client capabilities or version here if needed during registration
}

message RegisterClientResponse {
  string client_id = 1; // The generated GUID ID of the registered client instance
}

// Messages for UpdateClientStatus RPC
message UpdateClientStatusRequest {
  string client_id = 1; // GUID
  string status = 2;    // e.g., "Connected", "Disconnected", "Error"
  google.protobuf.Timestamp last_seen = 3;
}

message UpdateClientStatusResponse {
  // Empty response indicates success, errors are conveyed via gRPC status codes
}

// Messages for GetClientConfiguration RPC
message GetClientConfigurationRequest {
  string client_id = 1; // GUID
}

message GetClientConfigurationResponse {
  ClientConfigurationProto configuration = 1;
}

// Shared message representing a client configuration and its versions
message ClientConfigurationProto {
  string id = 1; // GUID of the configuration
  string client_instance_id = 2; // GUID of the client instance this config belongs to
  string name = 3;
  repeated ConfigurationVersionProto versions = 4; // A list of all versions
  string active_version_id = 5; // GUID of the currently active version
  // Optionally include the active version content directly if frequently needed
  // ConfigurationVersionProto active_version_content = 6;
}

// Shared message representing a specific version of a configuration
message ConfigurationVersionProto {
  string id = 1; // GUID of this version
  int32 version_number = 2;
  string content = 3; // The actual configuration content (e.g., JSON string)
  google.protobuf.Timestamp created_at = 4;
  // bool is_active = 5; // Could be derived or explicitly set
}

// Messages for InitiateBulkConfiguration RPC
message InitiateBulkConfigurationRequest {
  repeated string client_instance_ids = 1; // List of client GUIDs
  string configuration_version_id = 2;   // GUID of the config version to apply
}

// Messages for InitiateBulkUpdate RPC
message InitiateBulkUpdateRequest {
  repeated string client_instance_ids = 1; // List of client GUIDs
  string update_package_url = 2;
  string target_version = 3;
}

// Common response for initiating bulk operations
message InitiateBulkOperationResponse {
  string job_id = 1; // GUID of the created bulk operation job
}

// Messages for GetBulkOperationStatus RPC
message GetBulkOperationStatusRequest {
  string job_id = 1; // GUID
}

message BulkOperationStatusResponse {
  string job_id = 1; // GUID
  string operation_type = 2; // e.g., "ConfigurationDeployment", "SoftwareUpdate"
  string status = 3;         // e.g., "Pending", "InProgress", "Completed", "Failed"
  string result_details = 4;   // Summary of results or failure reason
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp completed_at = 6; // Nullable if not completed
  repeated BulkOperationTaskDetailProto progress_details = 7;
}

message BulkOperationTaskDetailProto {
  string client_instance_id = 1; // GUID
  string status = 2;             // e.g., "Pending", "InProgress", "Completed", "Failed"
  string details = 3;            // Specific task result or error message
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp completed_at = 5; // Nullable if not completed
}

// Messages for StartConfigurationMigration RPC
message StartConfigurationMigrationRequest {
  bytes file_content = 1;
  string file_name = 2;
  string source_format = 3; // e.g., "CSV", "XML"
}

message StartConfigurationMigrationResponse {
  string job_id = 1; // GUID of the created migration job
}

// Messages for GetConfigurationMigrationStatus RPC
message GetConfigurationMigrationStatusRequest {
  string job_id = 1; // GUID
}

message ConfigurationMigrationStatusResponse {
  string job_id = 1; // GUID
  string file_name = 2;
  string source_format = 3;
  string status = 4; // e.g., "Pending", "Parsing", "Validating", "Saving", "Completed", "Failed"
  string result_details = 5; // Summary of results or failure reason
  repeated string validation_messages = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp completed_at = 8; // Nullable if not completed
}